# JuceTracktionKit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Package.swift  README.md  checksums.txt
Sources/: main.swift
Sources/CJuceTracktion/: Edit.cpp  SamplerPlugin.cpp  StepClip.cpp  TracktionBridge.cpp  TracktionEngine.cpp  Transport.cpp
Sources/CJuceTracktion/AudioEngine/: AudioEngine.cpp  AudioEngine.h  EngineHelpers.h
Sources/CJuceTracktion/JuceLibraryCode/: AppConfig.h  JuceHeader.h  include_juce_graphics_sheenbidi.mm  include_tracktion_core.cpp  include_tracktion_engine_airwindows_3.cpp
Sources/CJuceTracktion/MidiClipManager/: MidiClipManager.cpp  MidiClipManager.h
Sources/CJuceTracktion/MidiNote/: MidiNote.h
Sources/CJuceTracktion/TrackManager/: TrackManager.cpp  TrackManager.h
Sources/CJuceTracktion/extra/JuceTracktion/: JuceTracktion.jucer
Sources/CJuceTracktion/extra/JuceTracktion/Builds/MacOSX/JuceTracktion.xcodeproj/: project.pbxproj
Sources/CJuceTracktion/extra/JuceTracktion/Builds/iOS/JuceTracktion.xcodeproj/: project.pbxproj
Sources/CJuceTracktion/extra/JuceTracktion/JuceLibraryCode/: AppConfig.h  include_tracktion_engine_airwindows_1.cpp  include_tracktion_engine_airwindows_2.cpp
Sources/CJuceTracktion/include/: AudioEngine.h  CJuceTracktion.h  CJuceTracktionExport.h  Edit.h  EditTimeRange.cpp  EditTimeRange.h  MidiClipManager.h  MidiNote.h  OSLogConfig.h  PluginCache.h  SamplerPlugin.h  SignpostDefines.h  StepClip.h  TempoSequence.h  Track.h  TrackManager.h  TracktionBridge.h  TracktionConfig.h  TracktionEngine.h  TracktionSignpost.h  Transport.h  module.modulemap  module.modulemap.old
Sources/JuceTracktionDemos/: StepSequencerDemo.swift
Sources/JuceTracktionDemosRunner/: main.swift
Sources/JuceTracktionKit/: AudioEngineManager.swift  JuceTracktionKit.swift  TracktionEngine.swift
Sources/JuceTracktionKit/Plugin/: SamplerPlugin.swift
Sources/JuceTracktionKit/Utils/: Duration.swift
Sources/JuceTracktionKitRunner/: main.swift
Sources/SwiftTracktionKit/: AudioEngineManager.swift  ContentView.swift
Sources/SwiftTracktionKit/MIDI/: MidiEvent.swift
Sources/SwiftTracktionKit/Plugin/: SamplerPlugin.swift
Sources/SwiftTracktionKit/SoundBank/: SoundBank.swift
Sources/SwiftTracktionKitRunner/: main.swift
Tests/JuceTracktionKitTests/: EngineTests.swift  JuceTracktionKitTests.swift
Tests/SwiftTracktionKitTests/: EngineTests.swift  SwiftTracktionKitTests.swift
scripts/: build-jucetracktion-static-lib.sh  build-tracktion-framework.sh
(+1 files in other folders)
